--- a/FigureLibrary/FigureLibrary.csproj
+++ b/FigureLibrary/FigureLibrary.csproj
@@ -45,8 +45,9 @@
     <Compile Include="Common\Point.cs" />
     <Compile Include="Concrete\Circle.cs" />
     <Compile Include="Concrete\Rectangle.cs" />
+    <Compile Include="Container\Figure.cs" />
+    <Compile Include="Container\IFigure.cs" />
     <Compile Include="Generator\FigureGenerator.cs" />
-    <Compile Include="IFigure\IFigure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
